Thu Dec 23 16:04:47 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c, libxslt/templates.c: fixed a couple of
	  spots where out-of-memory errors were not detected in time
	  (bug #153660 on OSF/1)
	  
Thu Dec  2 21:10:31 HKT 2004 William Brack <wbrack@mmm.com.hk>

	*doc/xslt.html, doc/downloads.html: changed the download link
	 on the web page for cvs snapshot
	 
Wed Dec  1 22:37:55 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/extensions.c, libxslt/functions.c, libxslt/numbers.c,
	  libxslt/pattern.c, libxslt/transform.c, libxslt/xslt.c,
	  libxslt/xsltInternals.h: minor changes to get rid of gcc
	  warnings, especially on 64-bit system. Implemented
	  XML_CAST_FPTR macro to cast between function pointer <->
	  object pointer while avoiding gcc warnings (a hack).
	  No change to the logic.

Wed Dec  1 10:47:15 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c xsltproc/xsltproc.c: applied patch from
	  Aleksey Gurtovoy moving some stat() definition for Windows
	  to the right place.

Wed Dec  1 14:30:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/xslt.c: applied patch from Mark Vakoc fixing bug with
	  namespace URI on template names.
	* tests/namespaces/tst9*, tests/namespaces/Makefile.am: added
	  test case for this

Tue Nov 30 10:53:18 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: more on RVT's in XPath predicates, this
	  time for bug 159726.  Cleaned up the logic a little, hopefully
	  now covers all setting of XSLT_RUNTIME_EXTRA.
	* tests/general/bug-158.xsl: corrected a typo

Thu Nov 25 22:24:03 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/variables.c, libxslt/xsltInternals.h: backed out the
	  last change and re-did it the "right way" (bug 158372).
	* tests/general/bug-158.*, tests/general/Makefile.am,
	  tests/docs/bug-158.*, tests/general/Makefile.am: added test
	  case for this bug

Wed Nov 24 10:51:51 HKT 2004 William Brack <wbrack@mmm.com.hk>
